# video-pipelines

./: .gitignore  Dockerfile.video2x  Makefile  README.md  cli-settings.yaml  pyproject.toml
config_templates/: example_template.yaml  flower.yaml  frieren_s2e07_4k_template.yaml  frieren_s2e07_copy_tracks_only_template.yaml  little-busters.yaml
docker/esrgan/: Dockerfile  run_esrgan.sh  upscale_frames.py
docker/rife/: Dockerfile  run_rife.sh
docker/seedvr2/: Dockerfile  seedvr2_upscale.py
scripts/: inspect.py
src/pipe/: chart.py  cli.py  config.py  ops.py  pipeline.py
